Remove home docs and about features
